--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         let a = new pai("gustavo",54,"29 de março")
         console.table(a);
 
-        let b = new filho("pedro",35,"28 de fevereiro","1989")
+        let b = new filho("pedro",35,"28 de fevereiro","1989", a.nome)
         console.table(b)
 
 
